--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "i18next": "^23.16.8",
+    "i18next-fs-backend": "^2.6.1",
+    "i18next-http-middleware": "^3.8.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.20.0",
     "socket.io": "^4.8.1"
