--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ MONGO_URI=mongodb+srv://adminposko:passwordSangatRahasia123@cluster0.bqty6wb.mon
 MIDTRANS_KEY=Mid-server-T1pUHfIfS78a6iuOC1cEHT_8
 MIDTRANS_CLIENT_KEY=Mid-client-u_5fBngbQUy-8M8X
 JWT_SECRET=rahasia_posko_backend_123
+JWT_REFRESH_SECRET=rahasia_refresh_token_posko_123
