--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
+
 PORT=4000
+NODE_ENV=development
 MONGO_URI=mongodb+srv://adminposko:passwordSangatRahasia123@cluster0.bqty6wb.mongodb.net/?appName=Cluster0
-MIDTRANS_KEY=Mid-server-T1pUHfIfS78a6iuOC1cEHT_8
-MIDTRANS_CLIENT_KEY=Mid-client-u_5fBngbQUy-8M8X
 JWT_SECRET=rahasia_posko_backend_123
 JWT_REFRESH_SECRET=rahasia_refresh_token_posko_123
+
+# Midtrans Configuration (PENTING!)
+MIDTRANS_KEY=Mid-server-T1pUHfIfS78a6iuOC1cEHT_8
+MIDTRANS_CLIENT_KEY=Mid-client-u_5fBngbQUy-8M8X
+MIDTRANS_MERCHANT_ID=G317808651
