--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
-  "buildCommand": "npm run build || npm install",
-  "devCommand": "npm run dev",
+  "version": 2,
   "builds": [
     {
       "src": "src/index.js",
@@ -12,15 +11,5 @@
       "src": "/(.*)",
       "dest": "src/index.js"
     }
-  ],
-  "env": {
-    "NODE_ENV": "production",
-    "MONGO_URI": "@mongo_uri",
-    "JWT_SECRET": "@jwt_secret",
-    "JWT_REFRESH_SECRET": "@jwt_refresh_secret",
-    "MIDTRANS_KEY": "@midtrans_key",
-    "MIDTRANS_CLIENT_KEY": "@midtrans_client_key",
-    "MIDTRANS_MERCHANT_ID": "@midtrans_merchant_id",
-    "CLIENT_URL": "@client_url"
-  }
+  ]
 }
