--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+NODE_ENV=development
 PORT=4000
 MONGO_URI=mongodb+srv://adminposko:passwordSangatRahasia123@cluster0.bqty6wb.mongodb.net/?appName=Cluster0
 MIDTRANS_KEY=Mid-server-T1pUHfIfS78a6iuOC1cEHT_8
