--- a/.env
+++ b/.env
@@ -1,7 +1,11 @@
 NODE_ENV=development
 PORT=4000
-MONGO_URI=mongodb+srv://adminposko:passwordSangatRahasia123@cluster0.bqty6wb.mongodb.net/?appName=Cluster0
+MONGO_URI=mongodb+srv://adminposko:passwordSangatRahasia123@cluster0.bqty6wb.mongodb.net/? appName=Cluster0
 MIDTRANS_KEY=Mid-server-T1pUHfIfS78a6iuOC1cEHT_8
 MIDTRANS_CLIENT_KEY=Mid-client-u_5fBngbQUy-8M8X
 JWT_SECRET=rahasia_posko_backend_123
 JWT_REFRESH_SECRET=rahasia_refresh_token_posko_123
+
+FRONTEND_CUSTOMER_URL=http://localhost:3000
+FRONTEND_PROVIDER_URL=http://localhost:3001
+FRONTEND_ADMIN_URL=http://localhost:3002
