--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-validator": "^7.3.1",
     "i18next": "^23.16.8",
     "i18next-fs-backend": "^2.6.1",
     "i18next-http-middleware": "^3.8.2",
