--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0",
+    "express": "^5.2.1",
     "express-validator": "^7.3.1",
     "i18next": "^23.16.8",
     "i18next-fs-backend": "^2.6.1",
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "midtrans-client": "^1.4.3",
     "mongoose": "^8.20.0",
+    "multer": "^2.0.2",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
