--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.948.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -23,6 +24,7 @@
     "midtrans-client": "^1.4.3",
     "mongoose": "^8.20.0",
     "multer": "^2.0.2",
+    "multer-s3": "^3.0.1",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
